--- a/index.html
+++ b/index.html
@@ -17,9 +17,13 @@
 </head>
 
 <body>
-    <main>
-        <div>kaire</div>
-        <div>desine</div>
+    <main class="container">
+        <div class="left-column">
+            kaire
+        </div>
+        <div class="right-column">
+            desine
+        </div>
     </main>
 </body>
 
