Left column style

--- a/index.html
+++ b/index.html
@@ -19,7 +19,12 @@
 <body>
     <main class="container">
         <div class="left-column">
-            kaire
+            <h1 class="main-title">Sign up</h1>
+            <div class="bottom-links">
+                <a class="link" href="#">Privacy policy</a>
+                <span class="symbol"> &amp;</span>
+                <a class="link" href="#">Terms of service</a>
+            </div>
         </div>
         <div class="right-column">
             desine
