Right column style

--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
     <link rel="mask-icon" href="./favicon/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
+    <!-- components -->
     <link rel="stylesheet" href="./css/main.css">
+     <!-- custom styles -->
+    <link rel="stylesheet" href="css/form.css">
 
 </head>
 
@@ -27,7 +30,10 @@
             </div>
         </div>
         <div class="right-column">
-            desine
+            <div class="close">x</div>
+            <form class="form">
+                REGISTRACIJOS FORMA
+            </form>
         </div>
     </main>
 </body>
