More specific form selector

--- a/index.html
+++ b/index.html
@@ -32,7 +32,20 @@
         <div class="right-column">
             <div class="close">x</div>
             <form class="form">
-                REGISTRACIJOS FORMA
+                <div class="form-row">
+                    <label for="">Username</label>
+                    <input type="text" placeholder="Your text">
+                </div>
+                <div class="form-row"><label for="">Email</label>
+                    <input type="text" placeholder="Your text">
+                </div>
+                <div class="form-row"><label for="">Password</label>
+                    <input type="password" placeholder="Your text">
+                </div>
+                <div class="form-row"><label for="">Repeat Password</label>
+                    <input type="password" placeholder="Your text">
+                </div>
+                <div class="form-row"> </div>
             </form>
         </div>
     </main>
