--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
     <!-- components -->
+    <link rel="stylesheet" href="./css/button.css">
     <link rel="stylesheet" href="./css/main.css">
      <!-- custom styles -->
     <link rel="stylesheet" href="css/form.css">
@@ -33,19 +34,26 @@
             <div class="close">x</div>
             <form class="form">
                 <div class="form-row">
-                    <label for="">Username</label>
-                    <input type="text" placeholder="Your text">
+                    <label for="username">Username</label>
+                    <input id="username" type="text" placeholder="Username" required>
                 </div>
-                <div class="form-row"><label for="">Email</label>
-                    <input type="text" placeholder="Your text">
+                <div class="form-row">
+                    <label for="email">Email</label>
+                    <input id="email" type="email" placeholder="Email" required>
                 </div>
-                <div class="form-row"><label for="">Password</label>
-                    <input type="password" placeholder="Your text">
+                <div class="form-row">
+                    <label for="password">Password</label>
+                    <input id="password" type="password" placeholder="Password" required>
                 </div>
-                <div class="form-row"><label for="">Repeat Password</label>
-                    <input type="password" placeholder="Your text">
+                <div class="form-row">
+                    <label for="repeat-password">Repeat Password</label>
+                    <input id="repeat-password" type="password" placeholder="Repeat-password" required>
                 </div>
-                <div class="form-row"> </div>
+                <div class="form-row">
+                <button class="btn" type="submit">Register now</button>
+                <span>or</span>
+                <a href="#">Sign in</a>
+                </div>
             </form>
         </div>
     </main>
