--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 </div>
                 <div class="form-row">
                     <label for="repeat-password">Repeat Password</label>
-                    <input id="repeat-password" type="password" placeholder="Repeat-password" required>
+                    <input id="repeat-password" type="password" placeholder="Repeat password" required>
                 </div>
                 <div class="form-row">
                 <button class="btn" type="submit">Register now</button>
