--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 </head>
 
 <body>
+    <div class="background-div"></div>
+   <!-- <img class="background-image" src="./img/moon.png" alt=""> -->
     <main class="container">
         <div class="left-column">
             <h1 class="main-title">Sign up </h1>
