--- a/login/index.html
+++ b/login/index.html
@@ -5,18 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign up</title>
-    <link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png">
-    <link rel="manifest" href="./favicon/site.webmanifest">
-    <link rel="mask-icon" href="./favicon/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="apple-touch-icon" sizes="180x180" href="../favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../favicon/favicon-16x16.png">
+    <link rel="manifest" href="../favicon/site.webmanifest">
+    <link rel="mask-icon" href="../favicon/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
     <!-- components -->
-    <link rel="stylesheet" href="./css/button.css">
-    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="../css/button.css">
+    <link rel="stylesheet" href="../css/main.css">
      <!-- custom styles -->
-    <link rel="stylesheet" href="css/form.css">
+    <link rel="stylesheet" href="../css/form.css">
 
 </head>
 
@@ -25,7 +25,7 @@
    <!-- <img class="background-image" src="./img/moon.png" alt=""> -->
     <main class="container">
         <div class="left-column">
-            <h1 class="main-title">Sign up </h1>
+            <h1 class="main-title">Login </h1>
             <div class="bottom-links">
                 <a class="link" href="#">Privacy policy</a>
                 <span class="symbol"> &amp;</span>
@@ -39,22 +39,16 @@
                     <label for="username">Username</label>
                     <input id="username" type="text" placeholder="Username" required>
                 </div>
-                <div class="form-row">
-                    <label for="email">Email</label>
-                    <input id="email" type="email" placeholder="Email" required>
-                </div>
+                
                 <div class="form-row">
                     <label for="password">Password</label>
                     <input id="password" type="password" placeholder="Password" required>
                 </div>
+               
                 <div class="form-row">
-                    <label for="repeat-password">Repeat Password</label>
-                    <input id="repeat-password" type="password" placeholder="Repeat password" required>
-                </div>
-                <div class="form-row">
-                <button class="btn" type="submit">Register now</button>
+                <button class="btn" type="submit">Login</button>
                 <span>or</span>
-                <a href="./login/">Sign in</a>
+                <a href="../forgot-password/">Forgot password</a>
                 </div>
             </form>
         </div>
