--- a/forgot-password/index.html
+++ b/forgot-password/index.html
@@ -38,7 +38,7 @@
                
                 <div class="form-row">
                     <label for="email">Email</label>
-                    <input id="email" type="email" placeholder="Email" required>
+                    <input id="email" type="email" placeholder="Email" required autocomplete="email">
                 </div>
                
                 <div class="form-row">
