--- a/index.html
+++ b/index.html
@@ -37,19 +37,19 @@
             <form class="form">
                 <div class="form-row">
                     <label for="username">Username</label>
-                    <input id="username" type="text" placeholder="Username" required>
+                    <input id="username" type="text" placeholder="Username" required autocomplete="off">
                 </div>
                 <div class="form-row">
                     <label for="email">Email</label>
-                    <input id="email" type="email" placeholder="Email" required>
+                    <input id="email" type="email" placeholder="Email" required autocomplete="email">
                 </div>
                 <div class="form-row">
                     <label for="password">Password</label>
-                    <input id="password" type="password" placeholder="Password" required>
+                    <input id="password" type="password" placeholder="Password" required autocomplete="new-password">
                 </div>
                 <div class="form-row">
                     <label for="repeat-password">Repeat Password</label>
-                    <input id="repeat-password" type="password" placeholder="Repeat password" required>
+                    <input id="repeat-password" type="password" placeholder="Repeat password" required autocomplete="new-password">
                 </div>
                 <div class="form-row">
                 <button class="btn" type="submit">Register now</button>
